test/spec_vectors/unreached-invalid/fail/module_88.wat
(module (func $type-block-value-nested-unreachable-void-vs-num (result i32) (block (block (unreachable)))))